Corrects invalid self-reference

--- a/02_object_oriented_programming.ipynb
+++ b/02_object_oriented_programming.ipynb
@@ -545,7 +545,7 @@
     "    def distance_to_origin(self) -> float:\n",
     "        return (self.x ** 2 + self.y ** 2) ** .5\n",
     "    \n",
-    "    def distance_from(self, other: Point2D) -> float:\n",
+    "    def distance_from(self, other: 'Point2D') -> float:\n",
     "        return ((self.x - other.x) ** 2 + (self.y - other.y) ** 2) ** .5\n",
     "\n",
     "@dataclass\n",
