Adds explaining text for pandas .loc examples

--- a/02_object_oriented_programming.ipynb
+++ b/02_object_oriented_programming.ipynb
@@ -620,6 +620,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Just as we created a `Point2D` object by \"calling\" the class, we can create a DataFrame:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -634,6 +641,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As can be seen, we created `transaction_df` by providing the constructor a dict having column names as keys and lists of column data as values. There are several other ways to [construct a DataFrame](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.html)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -643,12 +657,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's explore our DataFrame by inspecting some of its attributes:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "transaction_df.columns"
+    "transaction_df.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(transaction_df.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df.columns, type(transaction_df.columns)"
    ]
   },
   {
@@ -658,6 +697,22 @@
    "outputs": [],
    "source": [
     "transaction_df.amount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(transaction_df.amount)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can somehow look up columns of the DataFrame using the `[]` notation, just as with dicts."
    ]
   },
   {
@@ -679,12 +734,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "transaction_df['amount'][0], type(transaction_df['amount'][0])"
+    "... or look up individual values"
    ]
   },
   {
@@ -693,7 +746,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir(transaction_df)"
+    "transaction_df['amount'][0], type(transaction_df['amount'][0])"
    ]
   },
   {
@@ -718,12 +771,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Every DataFrame has an _index_, with as default an integer sequence starting at 0:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "transaction_df.index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's start investigating `.loc`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(transaction_df.loc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is an attribute of our DataFrame, but not a method. We can provide single keys from the DataFrame's index to lookup a particular row:"
    ]
   },
   {
@@ -736,12 +819,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "... or provide a list of keys to retrieve multiple rows:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "transaction_df.loc[[0, 2]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can add a custom index when constructing a DataFrame:"
    ]
   },
   {
@@ -764,7 +861,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "transaction_df.index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`loc[]` will raise a `KeyError` when looking up a key that's not in the index:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "transaction_df.loc[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Just as for DataFrames, there's also a constructor for Series (which are representations of the columns or rows of a DataFrame):"
    ]
   },
   {
@@ -778,6 +898,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using `assign()`, we add the transaction messages as a new column to the DataFrame:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -787,13 +914,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Is this the expected result? What went wrong? How can the situation be corrected such that the messages correspond to the existing transactions in our DataFrame?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "transaction_messages = pd.Series(['foo', 'bar', 'baz'], index=[2, 4, 6])\n",
     "transaction_df.assign(message=transaction_messages)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In some cases, it is useful to reset the index, i.e., to change the existing index into an integer sequence starting at 0:"
    ]
   },
   {
@@ -803,6 +948,13 @@
    "outputs": [],
    "source": [
     "transaction_df.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that the original index is added to the DataFrame as a column named `index`."
    ]
   },
   {
@@ -821,12 +973,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As an opposite, we can take one column and make it the DataFrame's index:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "transaction_df.set_index('tx_id')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Why do we bother with all this indexing? The following statements demonstrate the speed differences in searching a DataFrame for particular values:"
    ]
   },
   {
@@ -851,13 +1017,6 @@
     "    'b': np.random.permutation(df_size)\n",
     "})\n",
     "foo_df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Why indexing?"
    ]
   },
   {
@@ -895,7 +1054,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%timeit big_foo_df = foo_df.set_index('b')"
+    "%timeit idx_foo_df = foo_df.set_index('b')"
    ]
   },
   {
@@ -906,7 +1065,7 @@
    "source": [
     "%%timeit\n",
     "for n in np.random.choice(df_size, size=10):\n",
-    "    idx_big_foo_df.loc[n]"
+    "    idx_foo_df.loc[n]"
    ]
   },
   {
@@ -916,6 +1075,56 @@
    "outputs": [],
    "source": [
     "%timeit idx_foo_df.loc[42]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Boolean-based Selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Besides index labels, we can also provide boolean sequences, or _masks_, to `loc[]`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df.loc[[True, False, True]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df['amount'] > 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df.loc[transaction_df['amount'] > 100]"
    ]
   },
   {
