--- a/02_object_oriented_programming.ipynb
+++ b/02_object_oriented_programming.ipynb
@@ -1135,6 +1135,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next to our `Circle` class, we add a class `Square` to our domain:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1158,12 +1165,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This introduces a few problems. Both `Circle` and `Square` have a `center` attribute which is replicated. And imagine that both classes would share a common implementation of a method, e.g. `distance_to_origin()` that returns the distance from the center of the shape to the origin of the space. That would create additional copy/pasting of code, which is undesirable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A solution for these issues is object _inheritance_. Besides being composed of other objects, objects can _inherit_ data and behavior from _parent_ objects."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from abc import ABC, abstractmethod"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All the common data and methods for circles, squares (and other shapes we might add in the future) can be defined in an (abstract) base class:"
    ]
   },
   {
@@ -1189,12 +1217,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note the parentheses in the class definition: they mean that the class `Shape2D` inherits from class `ABC` (which we imported and stands for Abstract Base Class). Also note the `@abstractmethod` decorators, which indicate that these methods have no implementation in our `Shape2D` class."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "s = Shape2D()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inheritance from `ABC` makes sure we cannot (incidentally) construct an object from an abstract base class. We can now define our `Circle` class as follows. Note the absence of the `center` attribute and the `distance_to_origin()` method. These are inherited from the base class."
    ]
   },
   {
@@ -1211,6 +1253,13 @@
     "        return 2 * math.pi * self.radius\n",
     "\n",
     "c = Circle(Point2D(3, 4), 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We still cannot construct an object of type `Circle`, because it didn't implement the abstract method `__contains__()` from its base class. The `@abstractmethod` decorator makes sure that we don't incidentally create an object with an unimplemented method."
    ]
   },
   {
@@ -1249,7 +1298,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Not _required_ to have abc, just convenient and clear"
+    "It is not _required_ that parent or base classes inherit from `ABC`, or explicitly define abstract methods using the `@abstractmethod` decorator. However, these are helpful to make our intent clear and prevent some mistakes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the object hierarchy of shapes, we can now easily define a function that sums the circumference of all shapes in an Iterable, regardless their exact type:"
    ]
   },
   {
@@ -1274,13 +1330,6 @@
     "    Circle(Point2D(3, 4), 1),\n",
     "    Square(Point2D(0, 0), 2)\n",
     "])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "sklearn estimators?"
    ]
   },
   {
