Adds explaining text to Iterators section

--- a/02_object_oriented_programming.ipynb
+++ b/02_object_oriented_programming.ipynb
@@ -1340,6 +1340,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `__iter__()` and `__next__()` magic methods allow us to turn any object into an _Iterator_:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1363,13 +1370,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These magic methods are called when the object is passed to the built-in functions `iter()` and `next()`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "r = IntRange(3)\n",
-    "r_iter = r.__iter__()"
+    "r_iter = iter(r)\n",
+    "next(r_iter), next(r_iter)"
    ]
   },
   {
@@ -1378,16 +1393,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r_iter.__next__()"
+    "next(r_iter)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "l_iter = iter([1, 2, 3])"
+    "`next()` returns the next element of the sequence represented by the Iterator, while `iter()` turns the object passed to it into the actual Iterator (and performs any necessary initialization). When there are no more elements to return, `next()` is supposed to raise a `StopIteration` exception."
    ]
   },
   {
@@ -1403,6 +1416,13 @@
     "    except StopIteration:\n",
     "        print('Finished iterating!')\n",
     "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Of course, we don't need to explicitly call the `iter()` and `next()` functions. Any object that implements an `__iter__()` method is called an _Iterable_. Whenever we use an Iterable in a `for .. in` loop, Python automatically creates the Iterator for us and repeatedly calls its `__next__()` method until the `StopIteration` exception:"
    ]
   },
   {
@@ -1428,7 +1448,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ref to `range()`!"
+    "For your information, Python has a [range](https://docs.python.org/3/library/stdtypes.html#ranges) class in its standard library for purposes such as above.\n",
+    "\n",
+    "__Question__: What is the benefit (in terms of memory usage) of using Iterators?"
    ]
   },
   {
@@ -1441,12 +1463,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Square(Point2D(0, 0), 2).__class__.__name__"
+    "Another usage of Iterators is to group \"common\" objects in a sequence and inspecting these groups (or computing some aggregate):"
    ]
   },
   {
@@ -1566,6 +1586,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How does this relate to Pandas' `groupby()` method?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1575,12 +1602,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When we group by the recipient of the transaction, we get a `DataFrameGroupBy` object:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "type(transaction_df.groupby('to'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "... which is just another Iterable:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = transaction_df.groupby('to')\n",
+    "g_iter = iter(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "next(g_iter)"
    ]
   },
   {
