Details reflection about DataFrame method chaining

--- a/02_object_oriented_programming.ipynb
+++ b/02_object_oriented_programming.ipynb
@@ -1767,43 +1767,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Reflection: `.loc[]`, pandas method chaining"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "transaction_df.loc[transaction_df['to'] == 'alice']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(transaction_df.loc[transaction_df['to'] == 'alice'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "transaction_df['to'] == 'alice'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "transaction_df.loc[[0, 2]]"
+    "_Reflection_: looking at the snippet below, what is the object that the `assign` method is bound to? What is its type? Does it have a name?"
    ]
   },
   {
