--- a/03_functional_programming.ipynb
+++ b/03_functional_programming.ipynb
@@ -15,6 +15,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What's the difference between an integer and a function?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -23,6 +30,13 @@
     "a = 42\n",
     "def add_one(x):\n",
     "    return x + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A function has a type, just like an integer:"
    ]
   },
   {
@@ -35,12 +49,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A function has an identity, just like an integer:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "id(a), id(add_one)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`add_one` is just a _name_ of a function object, just as `a` is the _name_ of the integer object"
    ]
   },
   {
@@ -53,12 +81,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A function has attributes, like other objects:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "dir(add_one)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note the `__call__()` magic method:"
    ]
   },
   {
@@ -71,10 +113,87 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataclasses import dataclass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can define classes having a `__call__()` method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dataclass\n",
+    "class add_n:\n",
+    "    n: int\n",
+    "    \n",
+    "    def __call__(self, x):\n",
+    "        return x + self.n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "... and call objects of these classes as if they were functions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_two = add_n(2)\n",
+    "add_two(42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So a function is nothing else than an object with a `__call__()` method implemented. Every mention of _callable_ in documentation or type hints means that the \"callable\" object has a `__call__()` implementation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "callable(add_one), callable(add_two)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Discussion__: What would be a good use case for having an (obviously more complex) class with a `__call__()` method instead of a simple function definition?"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Functions as Arguments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because functions are objects, we can pass them as arguments to other functions:"
    ]
   },
   {
@@ -95,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert mapper(add_one, [1, 10, 100]) == [2, 11, 101]"
+    "mapper(add_one, [1, 10, 100])"
    ]
   },
   {
@@ -117,7 +236,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert filters(is_even, [1, 2, 3, 4]) == [2, 4]"
+    "filters(is_even, [1, 2, 3, 4])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our `mapper()` and `filters()` functions were just there for illustration purposes: Python has the built-in functions [`map()`](https://docs.python.org/3/library/functions.html#map) and [`filter()`](https://docs.python.org/3/library/functions.html#filter)."
    ]
   },
   {
@@ -144,6 +270,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's define a function that indicates if the amount of a transaction is larger than 100:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -154,12 +287,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since `.loc[]` accepts a _callable_ as input, we can pass our function to it:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "transaction_df.loc[select_large_transactions]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that we didn't _call_ the function ourselves. It was `.loc[]` that called our function, and it was `loc[]` that passed whatever DataFrame it was bound to at that moment as the first argument to our function."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can similarly pass functions to `assign()`:"
    ]
   },
   {
@@ -185,7 +339,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also provide arguments using [`functools.partial()`](https://docs.python.org/3/library/functools.html#functools.partial) from the standard library:"
+    "We can also _freeze_ some arguments of a function before passing it using [`functools.partial()`](https://docs.python.org/3/library/functools.html#functools.partial) from the standard library:"
    ]
   },
   {
@@ -195,6 +349,19 @@
    "outputs": [],
    "source": [
     "from functools import partial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_n(x, n=1):\n",
+    "    return x + n\n",
+    "\n",
+    "add_three = partial(add_n, n=3)\n",
+    "add_three(10)"
    ]
   },
   {
@@ -221,6 +388,13 @@
    "metadata": {},
    "source": [
     "## Functions Returning Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If functions can accept other functions as arguments, they surely can also _return_ functions:"
    ]
   },
   {
@@ -268,19 +442,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from functools import partial"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def add_n(x, n):\n",
-    "    return x + n\n",
-    "\n",
-    "add_two = partial(add_n, n=2)\n",
     "mapper(add_two, [1, 42, 100])"
    ]
   },
@@ -294,6 +455,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There's a problem when we pass `None` (or other unexpected types) to the function that we apply on our iterable. We can fix it by modifying the adder function:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -301,7 +469,7 @@
    "source": [
     "def add_one(x):\n",
     "    if x is not None:\n",
-    "        return x\n",
+    "        return x + 1\n",
     "    else:\n",
     "        return None\n",
     "\n",
@@ -312,7 +480,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Why is this sub-optimal? What if there's a `add_two()` etc? Repeat all the checking for None everywhere?"
+    "Why is this sub-optimal? What if there's an `add_two()` etc? Do we need to repeat all the checking for None everywhere?"
    ]
   },
   {
@@ -329,10 +497,14 @@
     "        else:\n",
     "            return None\n",
     "    \n",
-    "    return fn_wrapper\n",
-    "\n",
-    "def add_one(x):\n",
-    "    return x + 1"
+    "    return fn_wrapper"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A solution is to define a _wrapper_ function `fn_wrapper()` that intercepts calls to the wrapped function `fn`, and only calls the wrapped function (and returns its result) if the arguments passed to the wrapped function are valid. Note that this wrapper function is defined inside the body of another function `skip_None()`, which accepts the actual function to be wrapped."
    ]
   },
   {
@@ -341,8 +513,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def add_one(x):\n",
+    "    return x + 1\n",
+    "\n",
+    "def add_two(x):\n",
+    "    return x + 2\n",
+    "\n",
     "add_one_wrapped = skip_None(add_one)\n",
-    "mapper(add_one_wrapped, [1, None, 100])"
+    "add_two_wrapped = skip_None(add_two)\n",
+    "mapper(add_one_wrapped, [1, None, 100]), mapper(add_two_wrapped, [1, None, 100])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead of manually calling `skip_None()` to wrap our adder functions as above, Python has the `@` _decorator_ construct, which is just a syntactic shortcut to help us write more concise code. The following snippets are all equivalent:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_one(x):\n",
+    "    return x + 1\n",
+    "\n",
+    "skip_None(add_one)(1), skip_None(add_one)(None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_one(x):\n",
+    "    return x + 1\n",
+    "\n",
+    "add_one = skip_None(add_one)\n",
+    "add_one(1), add_one(None)"
    ]
   },
   {
@@ -355,7 +566,14 @@
     "def add_one(x):\n",
     "    return x + 1\n",
     "\n",
-    "mapper(add_one, [1, None, 100])"
+    "add_one(1), add_one(None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also write decorators that accept arguments. These add a second layer of inner function nesting:"
    ]
   },
   {
@@ -384,7 +602,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Seeing decorators like these for the first time may be confusing. The following snippets clarify the nesting of functions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_one(x):\n",
+    "    return x + 1\n",
+    "\n",
+    "max_41_checker = check_value(max_expected=41)\n",
+    "add_one_with_max_41_checking = max_41_checker(add_one)\n",
+    "add_one_with_max_41_checking(40), add_one_with_max_41_checking(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "check_value(max_expected=41)(add_one)(40), check_value(max_expected=41)(add_one)(42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Anonymous Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When we intend to use a single-purpose function that consists of returning the evaluation of one expression, we can use _lambda expressions_ instead of defining a (named) function:"
    ]
   },
   {
@@ -397,12 +652,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Even a lambda expression ... is just an object (of type `function`)!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "type(lambda x: x + 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id(lambda x: x + 10)"
    ]
   },
   {
@@ -424,6 +695,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can even assign a lambda expression to a variable, but this is discouraged in the \"official\" [Python Style Guide](https://www.python.org/dev/peps/pep-0008/)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -432,6 +710,45 @@
     "# Don't do this IRL\n",
     "add_ten = lambda x: x + 10\n",
     "add_ten(42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lambda expressions can have more than one argument:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import reduce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reduce(lambda x, y: x + y, [1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's look back at our Vector class from the previous module."
    ]
   },
   {
@@ -480,9 +797,11 @@
    "outputs": [],
    "source": [
     "def rotate_right(v: Vector) -> Vector:\n",
+    "    # rotates input by 90 degrees clockwise\n",
     "    return Vector([v[1], -v[0]])\n",
     "\n",
     "def rotate_left(v: Vector) -> Vector:\n",
+    "    # rotates input by 90 degrees counterclockwise\n",
     "    return Vector([-v[1], v[0]])"
    ]
   },
@@ -559,6 +878,13 @@
    "source": [
     "# bonus, deal with any Vector manipulation function\n",
     "assert Vector([1, 1]).pipe(lambda v: Vector([v[0] * 42, v[1] * 99])) == Vector([42, 99])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By now, the pandas `pipe()` method should have no secrets anymore:"
    ]
   },
   {
