Adds explaining text to examples of separation of concerns

--- a/04_best_practices.ipynb
+++ b/04_best_practices.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll put into practice what we've learned so far by working with some real-world data. Let's begin with loading a log of sports activities of a single person:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -39,6 +46,13 @@
    "outputs": [],
    "source": [
     "activity_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Question__: What does this overview tell us at a first glance?"
    ]
   },
   {
@@ -121,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q: in evaluation of the above expression, is any `DataFrame` method called?"
+    "__Question__: in evaluation of the above expression, is any `DataFrame` method called?"
    ]
   },
   {
@@ -129,6 +143,13 @@
    "metadata": {},
    "source": [
     "## Separation of Concerns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Assume we want to create a process that reads such activities from file, selects all the running activities, sorts these by date, and saves the result in another file. A possible implementation may look like this:"
    ]
   },
   {
@@ -163,7 +184,7 @@
     "**Discussion**:\n",
     "\n",
     "- What if there are many of these processes, and the data source changes from .json file to database?\n",
-    "- How can we test the business logic without access to file system or database?\n",
+    "- How can we test the business logic without access to a file system or database?\n",
     "- How can this be improved?"
    ]
   },
@@ -174,6 +195,15 @@
    "outputs": [],
    "source": [
     "# !rm data/processed_activities.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As soon as our work shifts from pure exploratory analysis in a notebook to repeatable and robust production systems, separation of concerns becomes important. As discussed above, any code that combines business logic with side effects such as reading/writing data, handling user input from a GUI, etc, can easily break when there are any changes in infrastructure or user interaction.\n",
+    "\n",
+    "The example in the cells below shows how our naive process implementation is improved by abstracting the infrastructure and separating the business logic from the process."
    ]
   },
   {
@@ -193,6 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Infrastructure Layer\n",
     "class ActivitySource(ABC):\n",
     "    @abstractmethod\n",
     "    def load(self):\n",
@@ -232,13 +263,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Business Layer\n",
     "def select_runs_and_sort_by_date(activity_df: pd.DataFrame) -> pd.DataFrame:\n",
     "    return (\n",
     "        activity_df\n",
     "        .loc[lambda df: df['type'] == 'Run']\n",
     "        .sort_values('start_date_local')\n",
-    "    )\n",
-    "\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Process Layer\n",
     "def process_activities(\n",
     "    source: ActivitySource,\n",
     "    processing_fn: Callable[[pd.DataFrame], pd.DataFrame],\n",
@@ -254,13 +294,6 @@
    "outputs": [],
    "source": [
     "process_activities(JsonLocalActivitySource(), select_runs_and_sort_by_date, CsvLocalActivitySink())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "TODO: architecture picture"
    ]
   },
   {
