Adds explaining text (+ exercise) to section about decluttering

--- a/04_best_practices.ipynb
+++ b/04_best_practices.ipynb
@@ -311,6 +311,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We could see before (using the `unique()` and `value_counts()` methods) that there were several activity types in our data. If we want to know the average speed per activity type in the year 2018, we could proceed as follows:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -324,8 +331,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://pandas.pydata.org/pandas-docs/stable/user_guide/basics.html#dt-accessor\n",
-    "https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html#time-date-components"
+    "Please note:\n",
+    "\n",
+    "1. the usage of the [`.dt`](https://pandas.pydata.org/pandas-docs/stable/user_guide/basics.html#dt-accessor) _accessor_ to retrieve the year from our `start_date_local` column ([here](https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html#time-date-components) is a complete list of properties that can be retrieved from timestamps)\n",
+    "2. the usage of `activity_df[COLUMN_NAME] = ...` to assign a new column to the DataFrame instead of calling the `assign()` method. What is the main difference between the two forms of assignment? Which is preferable?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Having retrieved the year, we can now select all activities in 2018, and group these by activity type:"
    ]
   },
   {
@@ -339,6 +355,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we compute the mean of the `velocity_mean` column per group and show the results:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -349,24 +372,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the above approach, we assigned all intermediate results to variables, while also mutating our source data by adding the `year` column. While storing these provisional results may assist with some rare cases of debugging, we usually don't need them. If they keep hanging around in our notebook we may incidentally refer to them later, causing bugs and confusion. Also, by mutating the source data, any additional analysis that we make may not work anymore (in isolation) when re-loading the data from disk.\n",
+    "\n",
+    "To start with a clean slate, let's reload our activity data:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "activity_df = pd.read_json('data/activities.json', convert_dates=['start_date_local'])\n",
-    "(\n",
-    "    activity_df\n",
-    "    .loc[lambda df: df['start_date_local'].dt.year == 2018]\n",
-    "    .groupby('type')['velocity_mean'].mean()\n",
-    ")"
+    "activity_df = pd.read_json('data/activities.json', convert_dates=['start_date_local'])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Introducing ... `Groupby.transform()`, TODO link to docs of agg/transform"
+    "__Exercise__: Rewrite the same analysis as above without using any temporary variables. The solution should be a single expression that evaluates to the exact same value as the `mean_velocity_by_type` variable above.\n",
+    "\n",
+    "_Bonus_: Try to write the analysis in such a way that it doesn't need any assignment of a `year` column.\n",
+    "\n",
+    "_Hint_: What is being returned by `loc[]` or `assign()`? You may want to refer back to the last example of method chaining (in the notebook about Object-Oriented Programming)"
    ]
   },
   {
@@ -375,11 +406,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(\n",
-    "    activity_df\n",
-    "    .loc[lambda df: df['start_date_local'].dt.year == 2018]\n",
-    "    .groupby('type')['velocity_mean'].transform('mean')\n",
-    ")"
+    "# Your solution:"
    ]
   },
   {
@@ -388,14 +415,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(\n",
-    "    activity_df\n",
-    "    .loc[lambda df: df['start_date_local'].dt.year == 2018]\n",
-    "    .assign(v_mean_diff=lambda df: (\n",
-    "        df.groupby('type')['velocity_mean']\n",
-    "        .transform(lambda type_v: type_v - type_v.mean())))\n",
-    "    .sample(10)\n",
-    ")"
+    "# %load solutions/decluttering_by_method_chaining.py"
    ]
   },
   {
@@ -535,6 +555,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Introducing ... `Groupby.transform()`, TODO link to docs of agg/transform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    activity_df\n",
+    "    .loc[lambda df: df['start_date_local'].dt.year == 2018]\n",
+    "    .groupby('type')['velocity_mean'].transform('mean')\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    activity_df\n",
+    "    .loc[lambda df: df['start_date_local'].dt.year == 2018]\n",
+    "    .assign(v_mean_diff=lambda df: (\n",
+    "        df.groupby('type')['velocity_mean']\n",
+    "        .transform(lambda type_v: type_v - type_v.mean())))\n",
+    "    .sample(10)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Bonus Exercises"
    ]
   },
@@ -617,7 +673,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What are the 7-day periods with the highest total amount of activity (in hours)? Similar to `groupby()`, Pandas has a method [`rolling()`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.rolling.html) for using an (aggregating) sliding window. It can even use a flexible time-based window size, given that the DataFrame index is a datetime-like (and sorted)."
+    "What are the 7-day periods with the highest total amount of activity (in hours)? Similar to `groupby()`, Pandas has a method [`rolling()`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.rolling.html) for using an (aggregating) sliding window. It can even use a flexible time-based window size, given that the DataFrame index is datetime-like (and sorted)."
    ]
   },
   {
